--- a/localization/korean/bck_extra_slots_l_korean.yml
+++ b/localization/korean/bck_extra_slots_l_korean.yml
@@ -1,4 +1,4 @@
-l_korean:
+﻿l_korean:
   bck_extra_slot_interaction:0 "기반 시설 확장"
   bck_extra_slot_interaction_desc:0 "#F 지역 기반 시설을 확장하여 더 많은 건물을 건설할 수 있도록 합니다.#!"
   bck_extra_slot_interaction_notification:0 "지역 기반 시설이 향상되었습니다"
