--- a/localization/polish/bck_extra_slots_l_polish.yml
+++ b/localization/polish/bck_extra_slots_l_polish.yml
@@ -1,4 +1,4 @@
-l_polish:
+﻿l_polish:
   bck_extra_slot_interaction:0 "Rozbuduj infrastrukturę"
   bck_extra_slot_interaction_desc:0 "#F Rozbuduj lokalną infrastrukturę, aby umożliwić budowę większej liczby budynków.#!"
   bck_extra_slot_interaction_notification:0 "Lokalna infrastruktura została ulepszona"
