--- a/localization/russian/bck_extra_slots_l_russian.yml
+++ b/localization/russian/bck_extra_slots_l_russian.yml
@@ -1,4 +1,4 @@
-l_russian:
+﻿l_russian:
   bck_extra_slot_interaction:0 "Расширить инфраструктуру"
   bck_extra_slot_interaction_desc:0 "#F Расширьте местную инфраструктуру, чтобы построить больше зданий.#!"
   bck_extra_slot_interaction_notification:0 "Местная инфраструктура была улучшена"
