--- a/localization/spanish/bck_extra_slots_l_spanish.yml
+++ b/localization/spanish/bck_extra_slots_l_spanish.yml
@@ -1,4 +1,4 @@
-l_spanish:
+﻿l_spanish:
   bck_extra_slot_interaction:0 "Ampliar infraestructura"
   bck_extra_slot_interaction_desc:0 "#F Amplía la infraestructura local para permitir la construcción de más edificios.#!"
   bck_extra_slot_interaction_notification:0 "La infraestructura local ha sido mejorada"
