--- a/localization/french/bck_extra_slots_l_french.yml
+++ b/localization/french/bck_extra_slots_l_french.yml
@@ -1,4 +1,4 @@
-l_french:
+﻿l_french:
   bck_extra_slot_interaction:0 "Agrandir les infrastructures"
   bck_extra_slot_interaction_desc:0 "#F Agrandissez les infrastructures locales pour permettre la construction de plus de bâtiments.#!"
   bck_extra_slot_interaction_notification:0 "Les infrastructures locales ont été améliorées"
